# pyNCbat

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml
_includes/: page__hero.html  sidebar.html
_layouts/: pdf.html  research.html  teaching.html
_pages/: home.md  install.md
_sass/minimal-mistakes/: _archive.scss  _buttons.scss  _footer.scss  _masthead.scss  _navigation.scss  _page.scss  _variables.scss
docs/: CNAME  _config.yml
docs/_data/: navigation.yml
docs/_includes/: author-profile.html  seo.html
docs/_includes/head/: custom.html
docs/_layouts/: single.html
docs/_pages/: about.md  documentation.md  home.md  install.md
docs/_sass/minimal-mistakes/: _page.scss  _sidebar.scss  _utilities.scss
docs/_sass/minimal-mistakes/skins/: _bateswhite.scss  _pyNCbat.scss  _unc.scss
examples/: twostorage_quadprog_OSQP_longleaf.py
pyNCbat/: NCbat_v3.py  NCbat_v4.py  helpers.py  setup_tech.py
pyNCbat/parameters/: costs.py  demand.py
requirements/: dependencies.txt  doc_requirements.txt
src/: classes.py
src/parameters/: conversion.py  custom-techs.py  generation.py  solver.py  storage.py
